4.1
 * Add native transport rate limiter options to example cassandra.yaml, and expose metric for dispatch rate (CASSANDRA-17423)
 * Add diagnostic events for guardrails (CASSANDRA-17197)
 * Increase cqlsh version (CASSANDRA-17432)
 * Update SUPPORTED_UPGRADE_PATHS to include 3.0 and 3.x to 4.1 paths and remove obsolete tests (CASSANDRA-17362)
 * Support DELETE in CQLSSTableWriter (CASSANDRA-14797)
 * Failed inbound internode authentication failures generate ugly warning with stack trace (CASSANDRA-17068)
 * Expose gossip information in system_views.gossip_info virtual table (CASSANDRA-17002)
 * Add guardrails for collection items and size (CASSANDRA-17153)
 * Improve guardrails messages (CASSANDRA-17430)
 * Remove all usages of junit.framework and ban them via Checkstyle (CASSANDRA-17316)
 * Add guardrails for read/write consistency levels (CASSANDRA-17188)
 * Add guardrail for SELECT IN terms and their cartesian product (CASSANDRA-17187)
 * remove unused imports in cqlsh.py and cqlshlib (CASSANDRA-17413)
 * deprecate property windows_timer_interval (CASSANDRA-17404)
 * Expose streaming as a vtable (CASSANDRA-17390)
 * Expose all client options via system_views.clients and nodetool clientstats (CASSANDRA-16378)
 * Make startup checks configurable (CASSANDRA-17220)
 * Add guardrail for number of partition keys on IN queries (CASSANDRA-17186)
 * update Python test framework from nose to pytest (CASSANDRA-17293)
 * Fix improper CDC commit log segments deletion in non-blocking mode (CASSANDRA-17233)
 * Add support for string concatenations through the + operator (CASSANDRA-17190)
 * Limit the maximum hints size per host (CASSANDRA-17142)
 * Add a virtual table for exposing batch metrics (CASSANDRA-17225)
 * Flatten guardrails config (CASSANDRA-17353)
 * Instance failed to start up due to NPE in StartupClusterConnectivityChecker (CASSANDRA-17347)
 * add the shorter version of version flag (-v) in cqlsh (CASSANDRA-17236)