@@ -1,4 +1,5 @@
 4.1
+ * Allow users to change cqlsh history location using env variable (CASSANDRA-17448)
  * Add native transport rate limiter options to example cassandra.yaml, and expose metric for dispatch rate (CASSANDRA-17423)
  * Add diagnostic events for guardrails (CASSANDRA-17197)
  * Increase cqlsh version (CASSANDRA-17432)
